--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "package/luci-app-argon-config"]
 	path = package/luci-app-argon-config
 	url = https://github.com/jerrykuku/luci-app-argon-config.git
+[submodule "package/luci-app-netspeedtest"]
+	path = package/luci-app-netspeedtest
+	url = https://github.com/muink/luci-app-netspeedtest.git
+[submodule "package/fantastic_packages"]
+	path = package/fantastic_packages
+	url = https://github.com/fantastic-packages/packages
