--- a/.config
+++ b/.config
@@ -138,7 +138,7 @@ CONFIG_LINUX_6_6=y
 CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_ca-bundle=y
 CONFIG_DEFAULT_dnsmasq=y
-#CONFIG_DEFAULT_dropbear=y
+CONFIG_DEFAULT_dropbear=y
 CONFIG_DEFAULT_e2fsprogs=y
 CONFIG_DEFAULT_f2fsck=y
 CONFIG_DEFAULT_firewall4=y
@@ -2568,24 +2568,24 @@ CONFIG_PACKAGE_dnsmasq_full_conntrack=y
 CONFIG_PACKAGE_dnsmasq_full_noid=y
 # CONFIG_PACKAGE_dnsmasq_full_broken_rtc is not set
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
-#CONFIG_PACKAGE_dropbear=y
+CONFIG_PACKAGE_dropbear=y
 
 #
 # Configuration
 #
-#CONFIG_DROPBEAR_CURVE25519=y
+CONFIG_DROPBEAR_CURVE25519=y
 # CONFIG_DROPBEAR_ECC is not set
-#CONFIG_DROPBEAR_ED25519=y
-#CONFIG_DROPBEAR_CHACHA20POLY1305=y
-#CONFIG_DROPBEAR_U2F=y
-#CONFIG_DROPBEAR_ED25519_SK=y
-#CONFIG_DROPBEAR_ZLIB=y
+CONFIG_DROPBEAR_ED25519=y
+CONFIG_DROPBEAR_CHACHA20POLY1305=y
+CONFIG_DROPBEAR_U2F=y
+CONFIG_DROPBEAR_ED25519_SK=y
+# CONFIG_DROPBEAR_ZLIB is not set
 # CONFIG_DROPBEAR_UTMP is not set
-#CONFIG_DROPBEAR_DBCLIENT=y
-#CONFIG_DROPBEAR_ASKPASS=y
-#CONFIG_DROPBEAR_DBCLIENT_AGENTFORWARD=y
-#CONFIG_DROPBEAR_SCP=y
-#CONFIG_DROPBEAR_AGENTFORWARD=y
+CONFIG_DROPBEAR_DBCLIENT=y
+# CONFIG_DROPBEAR_ASKPASS is not set
+CONFIG_DROPBEAR_DBCLIENT_AGENTFORWARD=y
+CONFIG_DROPBEAR_SCP=y
+CONFIG_DROPBEAR_AGENTFORWARD=y
 # CONFIG_DROPBEAR_MODERN_ONLY is not set
 # end of Configuration
 
