fixup! ci: add single-target smoke test
tools/libressl is being used by apk

Signed-off-by: Petr Štetiar <ynezz@true.cz>

--- a/.github/workflows/single-target.yml
+++ b/.github/workflows/single-target.yml
@@ -4,11 +4,13 @@ on:
   pull_request:
     paths:
       - 'include/**'
+      - 'tools/libressl/**'
       - 'package/base-files/**'
       - 'package/system/apk/**'
   push:
     paths:
       - 'include/**'
+      - 'tools/libressl/**'
       - 'package/base-files/**'
       - 'package/system/apk/**'
     branches-ignore:
