--- a/config/Config-build.in
+++ b/config/Config-build.in
@@ -427,7 +427,7 @@ menu "Global build settings"
 		bool "Enable SECCOMP"
 		select KERNEL_SECCOMP
 		select PACKAGE_procd-seccomp
-		depends on (aarch64 || arm || armeb || mips || mipsel || mips64 || mips64el || i386 || powerpc || x86_64)
+		depends on (aarch64 || arm || armeb || loongarch64 || mips || mipsel || mips64 || mips64el || i386 || powerpc || powerpc64 || riscv64 || x86_64)
 		depends on !TARGET_uml
 		default y
 		help
